# cmake-cuda-architectures-default

./: CMakeLists.txt  reamde.md
cmake/: CUDAArch.cmake  CUDAArch_callback.cmake  CUDAArchitectures.cmake  CUDAArchitecturesProjectInclude.cmake
hello/: CMakeLists.txt
hello/src/: main.cu
include/ccad/: ccad.cuh
src/: CMakeLists.txt
src/ccad/: ccad.cu
